--- a/HushHunt.Maui/Views/HomePage.xaml
+++ b/HushHunt.Maui/Views/HomePage.xaml
@@ -2,8 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HushHunt.Maui.Views.HomePage"
-             Title="Home">
+             Title="Hush-hush Hunt"
+             >
+    
     <VerticalStackLayout Padding="100">
-        <Button Text="Start game" Clicked="Button_Clicked" VerticalOptions="Center"/>
+        <Button Text="Start game" Clicked="Button_Clicked" VerticalOptions="Center" FontFamily="AbaddonBold" FontSize="20" WidthRequest="200" HorizontalOptions="Center"/>
     </VerticalStackLayout>
 </ContentPage>
