--- a/HushHunt.Maui/Views/GamePage.xaml
+++ b/HushHunt.Maui/Views/GamePage.xaml
@@ -25,9 +25,9 @@
             
                     
                    
-               >          
+               >
 
-            <Label x:Name="StatusLabel" Text="Game Status" HorizontalOptions="Center" VerticalOptions="Center" Margin="5,0,0,0" />
+            <Label  Text="Items to seek:" HorizontalOptions="Center" VerticalOptions="Center" Margin="5,0,0,0" />            
         </FlexLayout>
         <FlexLayout
             x:Name="ButtonsLayout"            
@@ -57,7 +57,25 @@
             </Button>
 
         </FlexLayout>
-    
+        <Rectangle BackgroundColor="Black" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="24" Grid.RowSpan="20" ZIndex="200" Opacity="0.85" x:Name="rtgIntro" >
+            
+        </Rectangle>
+
+        <VerticalStackLayout  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="24" Grid.RowSpan="20" ZIndex="201" Padding="30,100,30,40" x:Name="IntroLayout" >
+                <Label x:Name="lblLevel" Text="Level 1" TextColor="White" FontFamily="Pixeboy" FontSize="40" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+            <Label x:Name="lblHintUpdate" Text="Hint+5" TextColor="White" FontSize="15" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,0,0,10" IsVisible="False"></Label>
+            <Label x:Name="lblIntro" Text="You are to find" TextColor="White"  FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+            <FlexLayout x:Name="LevelIntroFlexLayout"
+                        Wrap="Wrap"
+                        JustifyContent="Center" 
+                       Margin="20"
+                        >
+                
+            </FlexLayout>
+            <Button x:Name="btnIntro" Text="OK" BackgroundColor="Transparent" FontSize="25" Clicked="btnIntro_Clicked"></Button>
+
+            </VerticalStackLayout>
+
     </Grid>
 
 </ContentPage>
