--- a/HushHunt.Maui/Views/GamePage.xaml
+++ b/HushHunt.Maui/Views/GamePage.xaml
@@ -2,12 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HushHunt.Maui.Views.GamePage"
-             Title="Game" NavigationPage.HasBackButton="True" >
+             Title="Game" NavigationPage.HasBackButton="True" 
+             BackgroundColor="#c0a42e">
 
 
-
-
-    <Grid RowDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" x:Name="MainGrid" >
+    <Frame Margin="10" CornerRadius="10" BackgroundColor="White" >
+        
+        <Grid RowDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" x:Name="MainGrid"   >
  
 
         <FlexLayout x:Name="ClickableImagesLayout"
@@ -18,16 +19,11 @@
                Grid.Column="0"
                Grid.ColumnSpan="24" 
                Grid.RowSpan="2"
-               ZIndex="100" 
-               Margin="1,1,1,1"
-                    Padding="100"
-
-            
-                    
-                   
+               ZIndex="100"      
+               Padding="100"      
                >
 
-            <Label  Text="Items to seek:" HorizontalOptions="Center" VerticalOptions="Center" Margin="5,0,0,0" />            
+            <Label  Text="Items to seek:" HorizontalOptions="Center" VerticalOptions="Center" Margin="5,0,0,0" x:Name="StatusLabel" />            
         </FlexLayout>
         <FlexLayout
             x:Name="ButtonsLayout"            
@@ -76,6 +72,7 @@
 
             </VerticalStackLayout>
 
-    </Grid>
+        </Grid>
+    </Frame>
 
 </ContentPage>
