--- a/HushHunt.Maui/Views/HomePage.xaml
+++ b/HushHunt.Maui/Views/HomePage.xaml
@@ -2,10 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HushHunt.Maui.Views.HomePage"
-             Title="Hush-hush Hunt"
+             Title=""
+          Shell.BackgroundColor="#c0a42e"  
              >
-    
-    <VerticalStackLayout Padding="100">
-        <Button Text="Start game" Clicked="Button_Clicked" VerticalOptions="Center" FontFamily="AbaddonBold" FontSize="20" WidthRequest="200" HorizontalOptions="Center"/>
-    </VerticalStackLayout>
+    <Grid RowDefinitions="*" ColumnDefinitions="*" >
+        <Image Grid.Row="0" Grid.Column="0" Aspect="AspectFill" Source="main_background.png" />
+
+            <VerticalStackLayout   WidthRequest="400" HeightRequest="200" Padding="0,150,0,0">
+              
+                <Button Text="Start" Clicked="Button_Clicked" VerticalOptions="Center" FontFamily="AbaddonBold" FontSize="40" WidthRequest="400" BackgroundColor="Transparent" FontAutoScalingEnabled="True" TranslationX="-30"/>
+            </VerticalStackLayout>
+
+    </Grid>
 </ContentPage>
