--- a/HushHunt.Maui/Views/HomePage.xaml
+++ b/HushHunt.Maui/Views/HomePage.xaml
@@ -10,7 +10,7 @@
 
             <VerticalStackLayout   WidthRequest="400" HeightRequest="200" Padding="0,150,0,0">
               
-                <Button Text="Start" Clicked="Button_Clicked" VerticalOptions="Center" FontFamily="AbaddonBold" FontSize="40" WidthRequest="400" BackgroundColor="Transparent" FontAutoScalingEnabled="True" TranslationX="-30"/>
+                <Button Text="Start" Clicked="Button_Clicked" VerticalOptions="Center" FontFamily="AbaddonBold" FontSize="40" WidthRequest="400" BackgroundColor="Transparent" FontAutoScalingEnabled="True" TranslationX="-30" TextColor="White"/>
             </VerticalStackLayout>
 
     </Grid>
